--- a/src/main/resources/templates/ordreoversigt.html
+++ b/src/main/resources/templates/ordreoversigt.html
@@ -14,7 +14,7 @@
 
     <div class="row" th:if="${assigned!=null}">
         <h3>Tildelte ordrer</h3>
-        <div class="col-4" th:each="ordera : ${assigned}">
+        <div class="col col-sm-6 col-md-4" th:each="ordera : ${assigned}">
             <div class="card m-2">
                 <div class="card-body">
                     <ul class="list-group list-group-flush">
@@ -34,8 +34,8 @@
     </div>
 
 
-    <div class="row row-cols g-4" th:if="${unassigned!=null}">
-        <h3>Ikke tildelte ordrer</h3>
+    <h3 th:if="${unassigned!=null}">Ikke tildelte ordrer</h3>
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4" th:if="${unassigned!=null}">
         <div class="col" th:each="orderu : ${unassigned}">
             <div class="card">
                 <div class="card-body">
