--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
 <body>
 <header th:replace="~{fragments :: navbar}"></header>
 
-<div class="container bg-body-tertiary m-5 p-3">
+<div class="container bg-body-tertiary mt-5 p-3">
     <div class="alert alert-info" th:if="${#ctx.message}" th:text="${#ctx.message}"></div>
     <div class="d-flex align-items-center py-4">
         <div class="m-auto">
